--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.22.2
+
+      - name: Terraform fmt
+        run: terraform fmt -check
+
       - uses: actions/setup-go@v5
         with:
           go-version: '>=1.24.4'
