--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
     branches:
       - main
+  merge_group:
+    branches:
+      - main
 
 jobs:
   validate:
@@ -25,6 +28,11 @@ jobs:
         with:
           go-version: '>=1.24.4'
 
-      - name: "run tests"
+      - name: "run validation tests"
         run: |
-          go test -run Validation -v ./... -timeout=30s
+          go test -run Validation -v ./... -timeout=10m
+
+      - name: "run integration tests"
+        if: ${{ github.event_name == 'merge_group' }}
+        run: |
+          go test -run VPC -v ./... -timeout=60m
