--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-infra/modules/*/.terraform
-infra/modules/*/.terraform.lock.hcl
-infra/modules/*/terraform.tfstate
-infra/modules/*/terraform.tfstate.backup
+infra/**/.terraform
+infra/**/.terraform.lock.hcl
+infra/**/terraform.tfstate
+infra/**/terraform.tfstate.backup
+.venv
